# blogging

./: .gitignore  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/blog/[id]/: page.tsx
app/contact/: page.tsx
app/create-blog/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
backend/: Cargo.toml
backend/src/: db.rs  helper.rs  main.rs
backend/src/auth/: auth.rs
backend/src/middleware/: auth.rs
backend/src/models/: models.rs
backend/src/routes/: routes.rs
components/: about-page.tsx  article-card.tsx  blog-detail.tsx  blog-layout.tsx  blog-list.tsx  contact-form-new.tsx  contact-page.tsx  create-blog-form.tsx  dashboard.tsx  design-sidebar.tsx  featured-article.tsx  hero-section-demo.tsx  login-form.tsx  medium-about.tsx  medium-blog-detail.tsx  medium-blog-list.tsx  medium-contact.tsx  medium-create-blog-form.tsx  medium-dashboard.tsx  medium-home.tsx  medium-login-form.tsx  medium-navbar.tsx  medium-signup-form.tsx  not-found.tsx  signup-form.tsx
components/ui/: cover.tsx  hero-section-2.tsx  navbar.tsx
hooks/: useGsapAnimation.ts
lib/: blog-data.ts
utils/: gsapAnimations.ts
