[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }

sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "tls-native-tls"
] }

tokio = { version = "1", features = ["full"] }
