[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = "0.4.44"
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "tls-native-tls"
] }

tokio = { version = "1", features = ["full"] }
utc = "0.2.0"
